# APM

./: .gitignore  CLAUDE.md  README.md
docs/: IMPLEMENTATION-PLAN.md
docs/specs/: architecture.md  data-model.md  frontend-specifications.md  project-overview.md  sdk-specifications.md
samples/: README.md  generate-traffic.ps1  generate-traffic.sh
samples/dotnet-webapi/: Program.cs  README.md  SampleWebApi.csproj  appsettings.json
samples/nodejs-express/: README.md  package.json
samples/nodejs-express/src/: index.js
samples/python-flask/: README.md  app.py
src/backend/APM.Collector/: APM.Collector.csproj  Program.cs  appsettings.json
src/backend/APM.Collector/Configuration/: AzureStorageOptions.cs  CollectorOptions.cs
src/backend/APM.Collector/Controllers/: ApplicationsController.cs  LogsController.cs  MetricsController.cs  OtlpController.cs
src/backend/APM.Collector/Middleware/: ApiKeyAuthMiddleware.cs
src/backend/APM.Collector/Services/: BatchProcessorService.cs  ITableStorageService.cs  ITelemetryProcessor.cs  TableStorageService.cs  TelemetryProcessor.cs
src/frontend/: index.html  package.json  tailwind.config.js
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: client.ts
src/frontend/src/components/: Layout.tsx  SeverityBadge.tsx  TimeRangeSelector.tsx
src/frontend/src/pages/: Applications.tsx  Dashboard.tsx  Logs.tsx  Metrics.tsx
src/sdks/javascript/: package.json
src/sdks/python/: pyproject.toml
src/sdks/python/src/racelogic_apm/: __init__.py  client.py  config.py  logger.py  metrics.py
(+18 files in other folders)
