[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racelogic-apm"
version = "1.0.0"
description = "APM SDK for Python applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Racelogic" }
]
keywords = ["apm", "telemetry", "opentelemetry", "logging", "metrics", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/racelogic_apm"]
